manifest/app/automation/route.yaml
# HTTP Route for git.lilamaris.kr
# sub-path list
#   root: gitea-http.ldevops.svc.cluster.local:3000 - gitea version control web application
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: automation
  namespace: lnetcore
spec:
  parentRefs:
  - name: public-gateway
    kind: Gateway
  hostnames:
  - n8n.lilamaris.kr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: n8n
        namespace: lautomation
        port: 5678
